v4.1.2 (Nov/2024):
- scan:
  - control ulimit handler and adjust according to threads
- global:
  - bug fixes

v4.1.1 (Oct/2024):
- added new binary: sippts-gui
- global:
  - clean unused params
  - added stop functions in some modules
  - bug fixes

v4.1 (Sep/2024):
- added IPv6 conversions
- renamed module sippcapdump to sipdump
- removed tshark module
- added module pcapdump to dump data from a PCAP file (SIP, RTP and RTP-to-WAV)
- added module video to show animated help
- added module astami to connect to Asterisk AMI
- scan:
  - added param -t to set sockets timeout
  - added param -oi to save found ips into a file
- leak:
  - added param -t to set sockets timeout
- enumerate:
  - added param -t to set sockets timeout
-	exten:
  - added param -t to set sockets timeout
- ping:
  - added param -t to set sockets timeout
- rcrack:
  - added param -t to set sockets timeout
- send:
  - added param -t to set sockets timeout
  - added param -v for verbose mode
  - added param -template to load SIP messages
- dcrack:
  - use pyshark library instead tshark application
  - added param -th to use threads
- global:
  - bug fixes

v4.0 (May/2024):
- Unify scripts into one: sippts
- bug fixes
- Deleted script sipfuzzer
- added param -cve in scan script to show possible CVEs
- added param -up for update scripts and cve file

v3.4 (Feb/2024):
- added param -ppi for P-Preferred-Identity
- added param -pai for P-Asserted-Identity
- sipsend:
  - added param --local_port to force local port
  - added param --no_contact to send message without contact header
- sipinvite: added param --local_port to force local port
- sipexten:
  - added param -ofile to save results
  - added param -f to filter response code
- sipsend:
  - added param -header to insert custom headers
- global:
  - bug fixes
- Renamed script sipdump to sippcapdump
- Renamed script sipcrack to sipdigestcrack

v3.3 (Nov/2022):
- sipflood:
  - added param -th to allow threads