@@ -103,34 +103,36 @@ class RTPBleed:
 
                         try:
                             (msg, addr) = sock.recvfrom(4096)
-                            (ipaddr, rport) = host
-                            size = len(msg)
 
-                            if size >= 12:
-                                x = "%s%s" % (hex(msg[2])[2:], hex(msg[3])[2:])
-                                seq = int("0x%s" % x, base=16)
-                                x = "%s%s%s%s" % (
-                                    hex(msg[4])[2:],
-                                    hex(msg[5])[2:],
-                                    hex(msg[6])[2:],
-                                    hex(msg[7])[2:],
-                                )
-                                timestamp = int("0x%s" % x, base=16)
-                                ssrc = "%s%s%s%s" % (
-                                    hex(msg[8])[2:],
-                                    hex(msg[9])[2:],
-                                    hex(msg[10])[2:],
-                                    hex(msg[11])[2:],
-                                )
+                            if addr[1] == port:
+                                (ipaddr, rport) = host
+                                size = len(msg)
 
-                                print(
-                                    f"{self.c.WHITE}received {str(size)} bytes from target port {str(rport)} - loop {str(loop)}"
-                                )
-                                print(
-                                    f"{self.c.WHITE}    [-] SSRC: {ssrc} - Timestamp: {timestamp} - Seq number: {seq}"
-                                )
-                                if self.ofile != "":
-                                    f.write(f"received {str(size)} bytes from target port {str(rport)} - loop {str(loop)} - SSRC: {ssrc} - Timestamp: {timestamp} - Seq number: {seq}\n")
+                                if size >= 12:
+                                    x = "%s%s" % (hex(msg[2])[2:], hex(msg[3])[2:])
+                                    seq = int("0x%s" % x, base=16)
+                                    x = "%s%s%s%s" % (
+                                        hex(msg[4])[2:],
+                                        hex(msg[5])[2:],
+                                        hex(msg[6])[2:],
+                                        hex(msg[7])[2:],
+                                    )
+                                    timestamp = int("0x%s" % x, base=16)
+                                    ssrc = "%s%s%s%s" % (
+                                        hex(msg[8])[2:],
+                                        hex(msg[9])[2:],
+                                        hex(msg[10])[2:],
+                                        hex(msg[11])[2:],
+                                    )
+
+                                    print(
+                                        f"\n{self.c.WHITE}received {str(size)} bytes from target port {str(rport)} - loop {str(loop)}"
+                                    )
+                                    print(
+                                        f"{self.c.WHITE}    [-] SSRC: {ssrc} - Timestamp: {timestamp} - Seq number: {seq}"
+                                    )
+                                    if self.ofile != "":
+                                        f.write(f"received {str(size)} bytes from target port {str(rport)} - loop {str(loop)} - SSRC: {ssrc} - Timestamp: {timestamp} - Seq number: {seq}\n")
                         except:
                             # No data available
                             continue
